# tztfingerprint-browser

./: .gitignore  README.md  package-lock.json  package.json  read.md
.cargo/: config.toml
.github/workflows/: release-bump.yml  tauri-build.yml
docs/: cn-acceleration.md
scripts/: build-x86.js  bump-version.js
server/: index.js  package-lock.json  package.json
server/data/: profiles.json
server/data/exports/123456_2411/: ChromeFeatureState  Local State  SingletonCookie  SingletonLock  SingletonSocket
server/data/exports/123456_2411/Default/: History  Preferences  Secure Preferences  Top Sites  Web Data
server/data/exports/123456_2411/Default/DawnGraphiteCache/: index
server/data/exports/123456_2411/Default/DawnWebGPUCache/: index
server/data/exports/123456_2411/Default/Extension Rules/: LOG
server/data/exports/123456_2411/Default/Extension Scripts/: LOG
server/data/exports/123456_2411/Default/GPUCache/: data_0  (+3 more)
server/data/exports/123456_2411/GrShaderCache/: index
server/data/exports/123456_2411/GraphiteDawnCache/: data_0  data_1  data_2  index
server/data/exports/123456_2411/ShaderCache/: index
server/data/exports/123456_2411/segmentation_platform/: ukm_db
server/lib/: browser.js  cdp.js  puppeteer-driver.js  socks5-forwarder.js
server/scripts/: build-and-zip.js  bundle-chrome.js  download-chromium.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/server/: .keep
src-tauri/src/: main.rs  public.rs
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx  api.js  index.css
(+322 files in other folders)
