[package]
name = "webset-tauri"
version = "0.1.0"
authors = ["Webset"]
edition = "2021"
description = "Tauri desktop app wrapper for Webset UI + Node backend"
build = "build.rs"

[dependencies]
tauri = { version = "2.0.0", features = [] }
ed25519-dalek = "1.0.1"
base64 = "0.21"
machine-uid = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }
sha2 = "0.10"


[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
